composs all tools